# autonomous-vehicle

./: .dockerignore  .gitignore  Dockerfile  README.md  requirements.txt
cpp/: CMakeLists.txt  OpenCVConfig.cmake
cpp/src/: main.cpp
cpp/test/: CMakeLists.txt  test.cpp
python/: requirements.txt
python/segmentation/: main.py  training_deeplab.py  training_pspnet.py  utils.py
python/segmentation/dataset/: image_180_320.npy  label_180_320.npy
python/segmentation/models/: model_deeplab3.py  model_pspnet.py  model_transformer.py
python/segmentation/utilities/: data_loader.py  hyperparameters.py
segmentation/models/: model_deeplab3.py
